--- a/localisation/russian/replace/replace_strategic_region_names_l_russian.yml
+++ b/localisation/russian/replace/replace_strategic_region_names_l_russian.yml
@@ -17,6 +17,7 @@
  STRATEGICREGION_39:0 "Галиция"
  STRATEGICREGION_40:1 "Центрально-Черноземная область"
  STRATEGICREGION_116:0 "Персия"
+ STRATEGICREGION_122:0 "Тихоокеанская Канада"
  STRATEGICREGION_124:0 "Новая Гранада"
  STRATEGICREGION_130:0 "Малороссия"
  STRATEGICREGION_131:0 "Беларусь"
