--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -4,6 +4,8 @@
  leave_faction:0 "Покинуть фракцию"
  sue_for_peace:0 "Предложить мир"
  sue_for_peace_FROM:0 "Предложить мир государству [FROM.GetNameDef]"
+ annex_FROM:0 "Аннексировать государство [FROM.GetNameDef]
+ 
  ww1_claims_and_cores:0 "Претензии и национальные территории"
  ww1_claims_and_cores_desc:0 "На мирной конференции после Великой войны победителям будут переданы их претензии и национальные территории из земель побежденных, если только не будет заключен мирный договор для конкретной страны или определенной территории."
  request_french_cannons:0 "Запросить французские пушки"
@@ -1774,9 +1776,8 @@
  CHI_proclaim_league_of_eight_provinces:0 "Провозгласить Лигу Восьми Провинций"
  CHI_JNC_attack_GXC:0 "Война Нанкин-Гуанси"
  CHI_JNC_attack_HNC:0 "Война Нанкин-Хуннань"
- CHI_JNC_attack_QIN:0 "Вторая Революция!"
- CHI_JNC_attack_QIN_desc:0 "Пришло время покончить с Китайской монархией!"
- CHI_SIK_annex_KUM:0 "Аннексировать Кумуль"
+ CHI_JNC_attack_QIN:0 "Вторая революция!"
+ CHI_JNC_attack_QIN_desc:0 "Пришло время покончить с китайской монархией!"
  CHI_KUM_call_support_from_XSM:0 "Вызов Клике Ма"
  CHI_KUM_call_support_from_XSM_desc:0 "Восстание началось. Но для успеха нам нужна помощь. Возможно, нам поможет государство [XSM.GetName]."
  CHI_SIK_call_sheng_shicai:0 "Вызвать Шэна Шицая"
