prince edward island

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -274,7 +274,7 @@
  STATE_273: "Fezzan"
  STATE_274: "Ghana"
  STATE_275: "Transvaal"
- STATE_276: "Southern Ontario"
+ STATE_276: "Ontario"
  STATE_277: "Mexico City"
  STATE_278: "Pampas"
  STATE_279: "Santiago"
@@ -680,7 +680,7 @@
  STATE_679: "Mecca"
  STATE_680: "Raqqa"
  STATE_681: "Cape"
- STATE_682: "Northern Ontario"
+ STATE_682: "Prince Edward Island"
  STATE_683: "Northeastern Canada"
  STATE_684: "Caroline Islands"
  STATE_685: "Panama Canal"
