--- a/localisation/english/replace/replace_strategic_region_names_l_english.yml
+++ b/localisation/english/replace/replace_strategic_region_names_l_english.yml
@@ -39,6 +39,10 @@
  STRATEGICREGION_192:0 "Novorossiya"
  STRATEGICREGION_196:2 "Arabia"
  STRATEGICREGION_201:0 "Central Andes"
+ STRATEGICREGION_213:0 "Atlantic Canada"
+ STRATEGICREGION_220:0 "Quebec"
+ STRATEGICREGION_221:0 "Prairie Provinces"
+ STRATEGICREGION_222:0 "Northern Territories"
  STRATEGICREGION_225:2 "Tripolitania"
  STRATEGICREGION_227:1 "Congo"
  STRATEGICREGION_228:0 "Levant"
