--- a/localisation/english/replace/replace_strategic_region_names_l_english.yml
+++ b/localisation/english/replace/replace_strategic_region_names_l_english.yml
@@ -17,6 +17,7 @@
  STRATEGICREGION_39:0 "Galicia"
  STRATEGICREGION_40:1 "Central Chernozem Region"
  STRATEGICREGION_116:0 "Persia"
+ STRATEGICREGION_121:0 "Ontario"
  STRATEGICREGION_122:0 "Pacific Canada"
  STRATEGICREGION_124:0 "New Granada"
  STRATEGICREGION_130:0 "Malorossiya"
@@ -39,6 +40,7 @@
  STRATEGICREGION_192:0 "Novorossiya"
  STRATEGICREGION_196:2 "Arabia"
  STRATEGICREGION_201:0 "Central Andes"
+ STRATEGICREGION_212:0 "Newfoundland and Labrador"
  STRATEGICREGION_213:0 "Atlantic Canada"
  STRATEGICREGION_220:0 "Quebec"
  STRATEGICREGION_221:0 "Prairie Provinces"
