Proper Canadian provinces

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -466,7 +466,7 @@
  STATE_465: "New Brunswick"
  STATE_466: "Quebec"
  STATE_467: "Manitoba"
- STATE_468: "Saint Lawrence"
+ STATE_468: "Northern Ontario"
  STATE_469: "Saskatchewan"
  STATE_470: "Alberta"
  STATE_471: "Yukon Territory"
@@ -681,7 +681,7 @@
  STATE_680: "Raqqa"
  STATE_681: "Cape"
  STATE_682: "Prince Edward Island"
- STATE_683: "Northeastern Canada"
+ STATE_683: "Northern Manitoba"
  STATE_684: "Caroline Islands"
  STATE_685: "Panama Canal"
  STATE_686: "Puerto Rico"
@@ -1052,6 +1052,8 @@
  STATE_1051: "Riau-Lingga"
  STATE_1052: "Ungava"
  STATE_1053: "Labrador"
+ STATE_1054: "Northern Saskatchewan"
+ STATE_1055: "Northern Alberta"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
