Some improvements for Bundesrat decisions and loc

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9369,8 +9369,11 @@ FRA_salary_limitation_act_desc:0 "The law proposed by §YMaurice Thorez§! defin
 show_regions_text:0 "Regions Map"
 
 german_region_alsace_lorraine:0 "§Y[28.getName]§!"
-german_region_alsace_lorraine_desc:0 "§Y[28.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+german_region_alsace_lorraine_desc:0 "§Y[28.getName]§! has §Y[alsace_lorraine_votes] Votes§! in the §YBundesrat§!."
 german_region_alsace_lorraine_desc_lore:0 "§LAlsace-Lorraine (German: Elsaß-Lothringen), officially the Imperial Territory of Alsace-Lorraine (German: Reichsland Elsaß-Lothringen), was a former territory of the German Empire, located in modern day France. It was established in 1871 by the German Empire after it had occupied the region during the Franco-Prussian War. The region was officially ceded to the German Empire in the Treaty of Frankfurt.§!\n\n§Y[28.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
+
+alsace_lorraine_votes_3_votes: "3"
+alsace_lorraine_votes_no_votes: "No"
 
 german_region_hesse:0 "§YGrand Duchy of Hesse§!"
 german_region_hesse_desc:0 "§Y[55.getName]§! has §Y3 Votes§! in the §YBundesrat§!."
@@ -9449,6 +9452,20 @@ GER_region_description_tt:0 "[GER_region_description_tt]"
 GER_region_description_desc:0 "[GER_region_description]"
 
 GER_region_parliament_desc_votes: "We can count on [getGermanBundesratMajority]/[getGermanBundesratTotal] MPs to vote for our proposals"
+GER_region_parliament_desc_votes2: "We have §Y[?ger_influence_bundesrat]§! §Cinfluence points§! to sway regions"
+GER_region_parliament_desc_supporters: "Regions that §Ysupport§! the law: §YPrussia§![baden_support][hessen_support][bayern_support][hansestadte_support][mecklenburg_support][saschen_support][braunschweig_support][wurttemberg_support][kleinstaaten_support][thuringen_support][reichsland_support]§!"
+
+baden_tt: ", §YBaden§!"
+hessen_tt: ", §YHesse§!"
+bayern_tt: ", §YBavaria§!"
+hansestadte_tt: ", §YFree and Hanseatic Cities§!"
+mecklenburg_tt: ", §YMecklenburg-Schwerin§!"
+saschen_tt: ", §YSaxony§!"
+braunschweig_tt: ", §YBrunswick§!"
+wurttemberg_tt: ", §YWürttemberg§!"
+kleinstaaten_tt: ", §YMinor States§!"
+thuringen_tt: ", §YThuringian States§!"
+reichsland_tt: ", §YElsass-Lothringen§!"
 
 parliament_text_ger_total_green: "[?ger_total_loyalist_count|0G]"
 parliament_text_ger_total_red: "[?ger_total_loyalist_count|0R]"
@@ -9471,5 +9488,12 @@ decision_cost_6_influence_tooltip: "It costs §Y6§! §Cinfluence points§! to s
 decision_cost_8_influence: "§Y8§! §CInfluence points§!"
 decision_cost_8_influence_blocked: "§Y8§! §CInfluence Points§!"
 decision_cost_8_influence_tooltip: "It costs §Y8§! §Cinfluence points§! to sway this state"
+
+GER_likely_to_pass: "§GThe law is likely to pass§!"
+GER_likely_to_be_rejected: "§RThe law is likely to be rejected§!"
+
+GER_start_test_voting: "[DEBUG] Voting on Test Law"
+GER_make_alsace_new_member_bundesrat: "[DEBUG] Give [28.GetName] Votes in the Bundesrat"
+GER_remove_alsace_from_bundesrat: "[DEBUG] Remove [28.GetName] Votes in the Bundesrat"
 
 DEN_ICE_act_of_union:0 "@DEN @ICE Danish–Icelandic Act of Union"
