little update for tunisia

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1583,6 +1583,9 @@
  TUN_colonial_party:0 "Administration Coloniale"
  TUN_destour_long:0 "Constitutional Liberal Party"
  TUN_destour:0 "Destour"
+
+ TUN_tunis_al_fatat_long:0 "Tunis Al-Fatat"
+ TUN_tunis_al_fatat:0 "Tunis Al-Fatat"
  
  KUR_democratic_party:0 "CTK"
  KUR_democratic_party_long:0 "Cemîyeta Tealîya Kurdistanê"
