--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -141,6 +141,7 @@
  professor_lawyer_arab:0 "Lawyer Professor"
  journalist_arab:0 "Journalist"
  democratic_journalist:0 "Democratic Journalist"
+ minister_of_feather:0 "Minister of Feather"
  autonomist:0 "Autonomist"
  cheikh_el_medina:0 "Cheikh El Médina"
  destour_support:0 "Destour Supporter"
