--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -297,7 +297,7 @@ ww1_germanrework.61.t:0 "France refuses to help!"
  ww1_germanrework.61.a:0 "We must back down"
 #UK asked if they'll join Germany against France
 ww1_germanrework.62.t:0 "Germany asks for help against France"
- ww1_germanrework.62.d:0 ""
+ ww1_germanrework.62.d:0 "Following France's defence of Portugal, it seems Germany is not planning to back down and instead has asked us to assure them of our unconditional support against France and Portugal. Whist we are obligated to support Germany, especially as we've already supported them diplomactically, now is our last chance to remove ourselves from what may turn out to be a far greater conflict.../n/nThe future of Europe may hang in the balance of our choice."
  ww1_germanrework.62.a:0 "We must help our ally"
  ww1_germanrework.62.b:0 "No way"
 #UK told of Germany backing down
