population tweaks and Montreal

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -466,7 +466,7 @@
  STATE_465: "New Brunswick"
  STATE_466: "Quebec"
  STATE_467: "Manitoba"
- STATE_468: "Northern Ontario"
+ STATE_468: "Montreal"
  STATE_469: "Saskatchewan"
  STATE_470: "Alberta"
  STATE_471: "Yukon Territory"
@@ -1054,6 +1054,7 @@
  STATE_1053: "Labrador"
  STATE_1054: "Northern Saskatchewan"
  STATE_1055: "Northern Alberta"
+ STATE_1056: "Patricia District"
 
  Dyushambe: "Dyushambe"
  YODONG_STATE: "Yodong"
