--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -474,3 +474,7 @@
  supreme_ruler:0 "Supreme Ruler"
  ruthless_commander:0 "Ruthless Commander"
  rus_anti_communist_crusader:0 "$anti_communist_crusader$"
+ anarchist_revolutionary:0 "Anarchist Revolutionary"
+ cossack_ataman:0 "Cossack Ataman"
+ cossack_warlord:0 "Cossack Warlord"
+ railway_magnate:0 "Railway Magnate"
