--- a/localisation/english/ww1_bulgaria_l_english.yml
+++ b/localisation/english/ww1_bulgaria_l_english.yml
@@ -25,6 +25,18 @@
 
 ## Decisions ##
 
+BUL_allow_free_press_dec:0 "Allow Free Press"
+BUL_empower_the_officers_cult_:0 "Empower the Officer's Cult"
+BUL_redirect_funds_to_public_adminstrations:0 "Redirect Funds to Public Administrations"
+BUL_redirect_funds_to_army_dec:0 "Redirect Funds to the Army"
+BUL_exagerate_turkish_instability_dec:0 "Exaggerate Turkish Instability"
+BUL_royal_tours_dec:0 "Begin a Royal Tour"
+BUL_managing_the_tsar_assembly_balance:0 "Managing the Tsar-Constitutional Assembly Power Balance"
+BUL_invite_german_rhine_experts:0 "Invite German Rhine Experts"
+BUL_invite_british_midlands_experts:0 "Invite British Midlands Experts"
+BUL_industry_stuff:0 "Process of Industrialization"
+BUL_manuevering_around_the_monopolies:0 "Manuevering Around the Monopolies"
+
 
  ##################
  # BULGARIA FOCUS #
@@ -141,6 +153,19 @@ BUL_prioritize_light_industry:0 "Prioritize Light Industry"
 BUL_fund_the_BDZ:0 "Fund the BDZ"
 BUL_prioritize_heavy_industry:0 "Prioritize Heavy Industry"
 BUL_force_the_farmers_into_factories:0 "Force Farmers into Factories"
+BUL_court_germany:0 "Court Germany"
+BUL_improve_relations_with_vienna:0 "Improve Relations With Vienna"
+BUL_reac_out_to_rome:0 "Reach Out to Rome"
+BUL_grain_to_germany:0 "Export Grains to Germany"
+BUL_bury_the_hatchet:0 "Bury The Hatchet"
+BUL_genesis_of_a_counter_to_vienna:0 "Genesis of a Counter to Vienna"
+BUL_apply_french_aviation:0 "Apply French Aviation"
+BUL_rely_on_moscow:0 "Rely On Moscow"
+BUL_appeal_to_britain:0 "Appeal to Britain"
+BUL_appeal_to_france:0 "Appeal to France"
+BUL_appeal_to_germany:0 "Appeal to Germany"
+BUL_certify_german_alliance:0 "Certify the Bulgo-German Alliance"
+BUL_certify_bul_entente_alliance:0 "Certify the Bulgo-Entente Alliance"
 
 ### -- DECISIONS -- ###
 BUL_arms_purchases:0 "Arms Purchases"
