stricten rationing decisions

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -54,8 +54,6 @@ GER_1907_federal_budget:0 "The 1907 Federal Budget"
 GER_1907_federal_budget_desc:0 ""
 GER_lost_momentum:0 "Lost Momentum"
 GER_lost_momentum_desc:0 ""
-GER_idea_extreme_rationing:0 "Extreme Rationing"
-GER_idea_extreme_rationing_desc:0 ""
 GER_idea_national_debt:0 "Effective National Debt"
 GER_idea_national_debt_desc:0 ""
 GER_idea_national_debt_2:0 "Growing National Debt"
@@ -67,6 +65,14 @@ GER_idea_national_debt_4_desc:0 ""
 GER_lack_of_capital:0 "Unfinanced Budget"
 GER_lack_of_capital_desc:0 ""
 GER_gained_momentum:0 "Gained Momentum"
+GER_idea_light_rationing:0 "Light Rationing"
+GER_idea_light_rationing_desc:0 ""
+GER_idea_moderate_rationing:0 "Moderate Rationing"
+GER_idea_moderate_rationing_desc:0 ""
+GER_idea_strict_rationing:0 "Strict Rationing"
+GER_idea_strict_rationing_desc:0 ""
+GER_idea_extreme_rationing:0 "Extreme Rationing"
+GER_idea_extreme_rationing_desc:0 ""
 
 #Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
@@ -386,6 +392,7 @@ GER_fleet_in_being_mission:0 "Fleet in Being"
 GER_smarter_navy_mission:0 "Smarter Navy"
 GER_national_debt_mission:0 "Growing Debt"
 GER_major_deficit_spending:0 "Major Deficit Spending"
+GER_stricten_rationing:0 "Stricten Rationing"
 #Missions
 GER_coalition_lifespan:0 "The Coalition's Lifespan"
 
