Tweaks, Reichstag alterations, Bundesrat Alterations, and focus: A Constitution for Alsace

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -9270,7 +9270,7 @@ july_crisis_alert:0 "July crisis alert"
 july_crisis_alert_tt:0 "§RThe July crisis§! begins, opposing §Y[AUH.getFlag][AUH.getAdjective]§! claims for reparations toward §Y[SER.getFlag][SER.getName]§!."
 
 GER_important_law_that_will_comeback:0 "\nIf this law is not passed, it will be proposed again in 60 days, until it is passed by the §Yreichstag§!"
-GER_vote_strengh_tt:0 "The Law may be voted by §Y[?merged_vote_strengh|0] Deputies§! on §Y199 required§!."
+GER_vote_strengh_tt:0 "§Y[?merged_vote_strengh|0] Deputies§! will vote for this law."
 GER_sway_left_will_vote_20_percent:0 "§Y20%§! of §tLeft deputies§! will vote it. (§Y[?left_vote|0] seats§!)"
 GER_sway_center_will_vote_20_percent:0 "§Y20%§! of §gCenter deputies§! will vote it. (§Y[?center_vote|0] seats§!)"
 GER_sway_right_will_vote_20_percent:0 "§Y20%§! of §2Right deputies§! will vote it. (§Y[?right_vote|0] seats§!)"
@@ -9282,9 +9282,9 @@ GER_sway_neutral_will_vote:0 "You will sway §Y20%§! of §LNeutral deputies§! 
 GER_law_pass:0 "§GThe Law will pass§!"
 GER_law_dont_pass:0 "§RThe Law will not pass without further swaying the Reichstag§!"
 GER_effect_if_it_pass:0 "\n\n§YEffect if the Law pass :§!"
-GER_vote_left_law:0 "This is considered as a leftist law. §Y100%§! of §tleft deputies§!, §Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote for it.\n\n"
-GER_vote_center_law:0 "This is considered as a centrist law. §Y100%§! of §gcenter deputies§!, §Y25%§! of §tleft deputies§!,§Y25%§! of §2right deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
-GER_vote_right_law:0 "This is considered as a rightist law. §Y100%§! of §2right deputies§!,§Y25%§! of §gcenter deputies§! and §Y25%§! of §Lneutral deputies§! will vote it.\n\n"
+GER_vote_left_law:0 "This is considered as a Leftist Law. §Y100%§! of §tLeft Deputies§!, §Y25%§! of §gCenter Deputies§! and §Y25%§! of §LNeutral Deputies§! will vote for it.\n\n"
+GER_vote_center_law:0 "This is considered as a Centrist Law. §Y100%§! of §gCenter Deputies§!, §Y15%§! of §tLeft Deputies§!,§Y15%§! of §2Right Deputies§! and §Y15%§! of §LNeutral Deputies§! will vote it.\n\n"
+GER_vote_right_law:0 "This is considered as a Rightist Law. §Y100%§! of §2Right Deputies§!,§Y25%§! of §gCenter Deputies§! and §Y25%§! of §LNeutral Deputies§! will vote it.\n\n"
 GER_temp_sway_left:0 "Sway Leftist Deputies"
 GER_temp_sway_center:0 "Sway Centrist Deputies"
 GER_temp_sway_right:0 "Sway Rightist Deputies"
@@ -9453,7 +9453,7 @@ GER_region_description_desc:0 "[GER_region_description]"
 
 GER_region_parliament_desc_votes: "We can count on [getGermanBundesratMajority]/[getGermanBundesratTotal] MPs to vote for our proposals"
 GER_region_parliament_desc_votes2: "We have §Y[?ger_influence_bundesrat]§! §Cinfluence points§! to sway regions"
-GER_region_parliament_desc_supporters: "Regions that §Ysupport§! the law: §YPrussia§![baden_support][hessen_support][bayern_support][hansestadte_support][mecklenburg_support][saschen_support][braunschweig_support][wurttemberg_support][kleinstaaten_support][thuringen_support][reichsland_support]§!"
+GER_region_parliament_desc_supporters: "Regions that §Gsupport§! the law: §YPrussia§![baden_support][hessen_support][bayern_support][hansestadte_support][mecklenburg_support][saschen_support][braunschweig_support][wurttemberg_support][kleinstaaten_support][thuringen_support][reichsland_support]§!"
 
 baden_tt: ", §YBaden§!"
 hessen_tt: ", §YHesse§!"
@@ -9489,8 +9489,8 @@ decision_cost_8_influence: "§Y8§! §CInfluence points§!"
 decision_cost_8_influence_blocked: "§Y8§! §CInfluence Points§!"
 decision_cost_8_influence_tooltip: "It costs §Y8§! §Cinfluence points§! to sway this state"
 
-GER_likely_to_pass: "§GThe law is likely to pass§!"
-GER_likely_to_be_rejected: "§RThe law is likely to be rejected§!"
+GER_likely_to_pass: "§GThe law will pass§!"
+GER_likely_to_be_rejected: "§RThis law will likely be rejected without swaying more states§!"
 
 GER_start_test_voting: "[DEBUG] Voting on Test Law"
 GER_make_alsace_new_member_bundesrat: "[DEBUG] Give [28.GetName] Votes in the Bundesrat"
