--- a/localisation/english/ww1_romania_l_english.yml
+++ b/localisation/english/ww1_romania_l_english.yml
@@ -27,6 +27,7 @@ ROM_sway_the_vote_of_soldiers:0 "Sway the Vote of Soldiers"
 ROM_invite_fredrick_wilhelm_as_king:0 "Invite Friedrich Wilhelm as King"
 ROM_sway_intellectuals:0 "Sway Intellectuals"
 ROM_rural_base.tt:0 "If §YDmitrie Sturdza§! is hired as an advisor, this focus will have the following effects:\n£boost_popularity_texticon Change in popularity of Democracy: §G+15.00%§!\n£political_power_texticon Political Power: §G+50§!.\n£stability_texticon Gain Base Stability: §G+5.00%§!.\n\n"
+ROM_help1:0 "If we reach §Y90%§! surrender progress, §YPetre Carp§! will coup our government!"
 ROM_entrench_the_aristocracy:0 "Entrench the Aristocracy"
 ROM_rural_base.tt2:0 "\nOur advisor §YDmitrie Sturdza§! is §GImproving§! the effects of this focus."
 ROM_the_party_of_thieves_desc:0 "The PNL governments of the past have been filled with corruption, corruption so deeply rooted everywhere in society that an investigation is needed. We must investigate several public institutions for PNL corruption, and shut them down."
