--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -35,6 +35,8 @@
  CAN_ENG_autonomy_colony_DEF:0 "the Canadian Confederation"
  CAN_ENG_autonomy_puppet_DEF:0 "the Province of Canada"
  CAN_ENG_autonomy_integrated_puppet_DEF:0 "$OVERLORDADJ$ North America"
+ NZL_ENG_autonomy_dominion:0 "Dominion of New Zealand"
+ NZL_ENG_autonomy_dominion_DEF:0 "the Dominion of New Zealand"
  USA_UK_autonomy_dominion:0 "Dominion of North America"
  USA_UK_autonomy_colony:0 "48 Colonies"
  USA_UK_autonomy_puppet:0 "$OVERLORDADJ$ North American Territories"
