--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -308,19 +308,19 @@ ww1_germanrework.62.t:0 "Germany asks for help against France"
  ww1_germanrework.62.b:0 "No way"
 #UK told of Germany backing down
 ww1_germanrework.63.t:0 "Germany backs down"
- ww1_germanrework.63.d:0 ""
+ ww1_germanrework.63.d:0 "After the German government was made aware that the French had come to the support of Portugal, the Chancellor of the Riechstag told the Kaiser that he must instruct government to recind their demands. Wilhelm listened to his Chancellor's plea and since removed the demands.\n\nThank god that the Krauts backed down..."
  ww1_germanrework.63.a:0 "Well that's sorted"
 #Portugal and France told of Germany backing down
 ww1_germanrework.64.t:0 "Germany backs down"
- ww1_germanrework.64.d:0 ""
+ ww1_germanrework.64.d:0 "Germany has rescinded their demands of Angola, meaning that Portugal and her colonies are now safe from the German dog! The support of the French government practically forced the Kaiser to order his government to back down, who would have thought that the fool could make his nation suffer even more shame?"
  ww1_germanrework.64.a:0 "Great!"
 #Germany told about Portugal backing down due to no French Support
 ww1_germanrework.65.t:0 "Portugal backs down"
- ww1_germanrework.65.d:0 ""
+ ww1_germanrework.65.d:0 "The French government having refused Portugal's plea for help has condemned Portugal to be forced to falter to our demands. The annexation of Angola will be immediate, and our colonial administration is already working to bring in the colony into the German Empire. Fortunately, there is already a strong German presence in Angola economically allowing us to quickly institute our new administration."
  ww1_germanrework.65.a:0 "A glorious diplomatic victory!"
 #UK told about Portugal backing down due to no French Support
 ww1_germanrework.66.t:0 "Portugal backs down"
- ww1_germanrework.66.d:0 ""
+ ww1_germanrework.66.d:0 "The French government having refused Portugal's plea for help has condemned Portugal to be forced to falter to our demands. Germany has already begun their annexation of Angola, and it's expected they will soon have set up their own administration there. Whilst the future of Portugal's colonies is uncertain, this victory for Germany highlights our new relationship with the Kaiser."
  ww1_germanrework.66.a:0 "Crisis Solved"
 #News event about Germany and UK war with France
 ww1_germanrework.67.t:0 "War breaks out in Europe!"
