--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -324,20 +324,20 @@ ww1_germanrework.66.t:0 "Portugal backs down"
  ww1_germanrework.66.a:0 "Crisis Solved"
 #News event about Germany and UK war with France
 ww1_germanrework.67.t:0 "War breaks out in Europe!"
- ww1_germanrework.67.d:0 ""
+ ww1_germanrework.67.d:0 "War in Europe! After Portugal refused a set of join demands from Britian and Germany, calling for the annexation of Angola, both nations have declared war on Portugal. However, France has come to the aid of Portugal in an attempt to curb German ambitions. No doubt other powers in Europe will soon enter the fray, including Russia and Austria.\n\nIn a centuries time, humanity will question why such a great conflict was started over just one colony..."
  ww1_germanrework.67.a:0 "A war to end all wars"
 #Germany informed of British backstab
 ww1_germanrework.68.t:0 "[ENG.GetName] refuses to help us"
- ww1_germanrework.68.d:0 ""
+ ww1_germanrework.68.d:0 "The British have turned and fled now that France has come to the support of Portugal. Whilst our government is enraged with the British, a course of action still needs to be decided, perhaps we can take them on our own... after all, we've done it once, we can do it again."
  ww1_germanrework.68.a:0 "We cannot back down now!"
  ww1_germanrework.68.b:0 "We have no choice"
 #Germany continues war without the British
 ww1_germanrework.69.t:0 "Germany starts war with France!"
- ww1_germanrework.69.d:0 ""
+ ww1_germanrework.69.d:0 "War in Europe! After Portugal refused a set of join demands from Britian and Germany, calling for the annexation of Angola, Germany has declared war on Portugal, notably without the support of Britain. However, France has come to the aid of Portugal in an attempt to curb German ambitions. No doubt other powers in Europe will soon enter the fray, including Russia and Austria.\n\nIn a centuries time, humanity will question why such a great conflict was started over just one colony..."
  ww1_germanrework.69.a:0 "Can Germany win?"
 #Germany backs down after UK backstab
 ww1_germanrework.70.t:0 "Germany backs down to France"
- ww1_germanrework.70.d:0  ""
+ ww1_germanrework.70.d:0  "After demanding the annexation of Angola from Portugal with the support of the UK, Germany has since removed the demands since their accomplice, Britain, has removed their support since the involvement of France in the affair. This is another in a long series of foreign policy embarrassments for Germany under Kaiser Wilhelm II."
  ww1_germanrework.70.a:0 "An unexpected betrayl"
 
 #Hollweg Wartime Coalition
