cemal to deal with his debt

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2860,12 +2860,12 @@
  debt_less_than_0:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is less than §Y0.0%§!\n"
  debt_less_than_75:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is less than §Y75.0%§!\n"
  debt_less_than_45:0 "£consumer_goods_texticon  Consumer Goods Factories factor value on §Y[TUR_get_opda_name]§! is less than §Y45.0%§!\n"
+ TRS_dissolve_the_debt_council_decision:0 "Dissolve the Debt Council"
+ TRS_dissolve_the_debt_council_decision_desc:0 "First established in 1881, Ottoman Public Debt Administration was founded with the task of collecting Ottoman debts as we were unable to pay our debts to foreign powers. Years passed buy, and we've been able to finally pay our debts to its last dime. As we no longer have no monetary obligations to any foreign powers, there's nothing preventing us from dissolving the council once and for all."
  TUR_declare_moratorium:0 "Declare Moratorium"
  TUR_declare_moratorium_desc:0 "Our debt has become more than what we're able to pay. By declaring a moratorium, we'll be able to reduce the effects of our current debt. Yet this decision of ours in the long run will strain our economy."
  TUR_foreign_debt_payment:0 "[FROM.GetAdjective] Debt Payment"
  TUR_foreign_debt_payment_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
- TUR_foreign_debt_payment_2:0 "[FROM.GetAdjective] Debt Payment"
- TUR_foreign_debt_payment_2_desc:0 "Road to a strong economy goes through a free economy. As we pay our debts, we'll eventually be able to abolish the debt council that the foreign nations have been using as a tool to control our finances."
  has_active_debt_payment:0 "Is currently paying §YForeign Debt§!"
  TUR_privatize_factories:0 "Privatize Civilian Factories"
  TUR_sell_mosul_oil:0 "Oil Concessions over Mosul"
