--- a/localisation/russian/ww1_focus_l_russian.yml
+++ b/localisation/russian/ww1_focus_l_russian.yml
@@ -6361,8 +6361,8 @@
  TUR_declare_the_republic_desc:0 "[ROOT.tur_declarerepublic_desc]"
  tur_declarerepublic1_desc:0 "Мы провели необходимые реформы, чтобы превратить нашу страну из отсталого государства в современную западную республику. Под руководством нашего великого лидера [ROOT.GetLeader], мы будем делать бесконечные реформы и революции."
  tur_declarerepublic2_desc:0 "Мы внесли необходимые коррективы, чтобы превратить нашу нацию из нестабильного государства в сильный Султанат. При нашем великом Султане [ROOT.GetLeader]мы создадим сильную нацию, управляемую абсолютным монархом."
- TUR_ottoman_debts: "Османские долги"
- TUR_ottoman_debts_desc:0 "Возможно, мы больше не османы, но иностранная власть по-прежнему хочет, чтобы их долги были погашены. Лучшее, что мы можем предложить, — это выплатить 60% наших оставшихся долгов."
+ TUR_ottoman_public_debt_administration: "Османские долги"
+ TUR_ottoman_public_debt_administration_desc:0 "Возможно, мы больше не османы, но иностранная власть по-прежнему хочет, чтобы их долги были погашены. Лучшее, что мы можем предложить, — это выплатить 60% наших оставшихся долгов."
  TUR_ask_for_the_kurdish_support: "Попросить курдской поддержки"
  TUR_ask_for_the_kurdish_support_desc:0 "Курды много раз восставали против османского владычества, и на этот раз они создали свое собственное государство. Но мы можем использовать религию и Халифа, чтобы заручиться поддержкой курдов, хотя любые будущие действия против них вызовут гнев населения."
  TUR_kurdish_volunteers: "Курдские добровольцы"
