planning pre-ww1 democratic tree

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10833,9 +10833,9 @@ POR_popular_way_desc:0 ""
 POR_popular_way_tt:0 "The §YChamber of Deputies§! will be temporarily replaced with the §YNational Constituent Assembly§!"
 POR_interim_republic:0 "The Interim Republic"
 POR_interim_republic_desc:0 ""
-POR_fractured_society:0 "A Fractured Society"
-POR_fractured_society_desc:0 ""
-POR_fractured_society_tt:0 ""
+POR_seek_international_recognition:0 "Seek International Recognition"
+POR_seek_international_recognition_desc:0 ""
+POR_seek_international_recognition_tt:0 ""
 POR_law_of_separation_of_church_and_state:0 "Lei da Separação"
 POR_law_of_separation_of_church_and_state_desc:0 ""
 POR_seize_clerical_property:0 "Nationalize Clerical Property"
@@ -10852,8 +10852,8 @@ POR_bicameralism_legislature_desc:0 ""
 POR_bicameralism_legislature_tt:0 "The §YChamber of Deputies§! will be reinstituted, which will remove the §YNational Constituent Assembly§!"
 POR_side_with_radical_republicans:0 "Side with the Radical Republicans"
 POR_side_with_radical_republicans_desc:0 ""
-POR_voice_of_arriga:0 "The Voice of Arriga"
-POR_voice_of_arriga_desc:0 ""
+POR_the_moderate_approach:0 "The 'Moderate' Approach"
+POR_the_moderate_approach_desc:0 ""
 
 POR_lisbon_calling:0 "Lisbon's Calling"
 POR_lisbon_calling_desc:0 ""
