fixed investment decisions

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2497,6 +2497,7 @@
  invest_in_ottoman_trablusgarp_mission:0 "Invest in Ottoman Trablusgarp"
  invest_in_ottoman_trablusgarp_mission_desc:0 "Our nation has a history of investing in the Ottomans. Through investments in the varous regions of the empire, we can gain financial leverages."
  already_investing_in_the_ottomans:0 "Already §Yinvesting§! in §Y[TUR.GetNameDef]§!"
+ already_investing_in_the_ottomans_tt:0 "NOT: Already §Yinvesting§! in §Y[TUR.GetNameDef]§!"
  TUR_not_taking_investment_rumelia:0 "§Y[TUR.GetName]§! blocked our §Yinvestment§!"
  TUR_not_taking_investment_anatolia:0 "§Y[TUR.GetName]§! blocked our §Yinvestment§!"
  TUR_not_taking_investment_syria:0 "§Y[TUR.GetName]§! blocked our §Yinvestment§!"
