--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -342,7 +342,7 @@ ww1_germanrework.70.t:0 "Germany backs down to France"
 
 #Hollweg Wartime Coalition
 ww1_germanrework.49.t:0 "Wartime Coalition"
- ww1_germanrework.49.d:0 ""
+ ww1_germanrework.49.d:0 "Now that Germany has been plunged into war, it's the responsibility of the Reichstag to ensure that the OHL can perform their duties to the empire without wading through the endless bureaucracy of the state. Chancellor Hollweg has therefore unified the Reichstag, in its whole, into a coalition that will have the ability to pass laws without opposition. This coalition will allow the civilian government to remain in power, however the coalition is unstable at best, with parts of the SPD wing downright ignoring the coalition with their anti-war rhetoric, and the right's call for the SPD to be dismissed from the Reichstag does little to keep the coalition alive.\n\nIf we want to ensure the civilian government doesn't lose power to the OHL, we must ensure this coalition survives."
  ww1_germanrework.49.a:0 "Peace in the Reichstag, war on the front"
 
 #Coalition Collapse
