--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -2,8 +2,9 @@
 
 #Ideas
 GER_idea_victory_propaganda:0 "Victory Propaganda"
+GER_idea_victory_propaganda_desc:0 ""
 GER_idea_bismarksche_reichsverassung:0 "Bismarksche Reichsverassung"
-GER_idea_bismarksche_reichsverassung_desc:0 ""
+GER_idea_bismarksche_reichsverassung_desc:0 "The constitution of the German Empire, written and coming into power during the last days of the Franco-Prussian war, it is the most basic law of our land. According to it, Germany is a federation of 25 states, each with their own limited rights and self-governance, but all under the permanent presidency of Prussia. The title of king of Prussia is synonymous with the title of Kaiser but even he does not govern absolutely. The Bundesrat, Germany's 'upper house' is made up of representatives of the various states, and the Reichstag, Germany's 'lower house', is led by the chancellor who is second only to the Kaiser.\n\nWhile seemingly a strong foundation of democracy, the German constitution in reality still allows for unprecedented levels of power for any constitutional monarch. With the Kaiser being able to appoint the Chancellor, allowing him to dictate what laws are proposed and vetoed in the Reichstag."
 GER_idea_naval_arms_race:0 "Naval Arms Race"
 GER_idea_naval_arms_race_desc:0 ""
 GER_idea_nationalstaat:0 "Nationalstaat"
@@ -13,11 +14,11 @@ GER_idea_lantag_of_prussia_desc:0 ""
 GER_idea_germany_encircled:0 "Germany Encircled"
 GER_idea_germany_encircled_desc:0 ""
 GER_idea_renowned_education_system:0 "Renowned Education System"
-GER_idea_renowned_education_system_desc:0 ""
+GER_idea_renowned_education_system_desc:0 "Germany's education is second to none, producing many notable scientists and engineers, further advaning our economy and military, and our allies and subjects are more than able to reap the benefits of our gains."
 GER_idea_rising_unions:0 "Rising Unions"
 GER_idea_rising_unions_desc:0 "§RWhilst this idea is active, major strikes will continue to occur§!"
 GER_rapid_urbanisation:0 "Rapid Urbanisation"
-GER_rapid_urbanisation_desc:0 ""
+GER_rapid_urbanisation_desc:0 "Whilst our grand economic success under God and Kaiser has proved to be bountiful, with German industry expanding across the nation and its influence reaching the markets of every corner of the world, our second industrialisation has left the countryside massively depopulated creating a sever deficit of infrastructure in the cities. Furthermore, the need to expand Germany's infrastructure has put a massive strain on our administrative capacities, leaving some area's understaffed."
 GER_rapid_urbanisation_2:0 "Rapid Urbanisation"
 GER_rapid_urbanisation_2_desc:0 ""
 GER_rapid_urbanisation_3:0 "Rapid Urbanisation"
