republican early political branch

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10854,6 +10854,58 @@ POR_side_with_radical_republicans:0 "Side with the Radical Republicans"
 POR_side_with_radical_republicans_desc:0 ""
 POR_the_moderate_approach:0 "The 'Moderate' Approach"
 POR_the_moderate_approach_desc:0 ""
+POR_recognize_striking_rights:0 "Recognize Striking Rights"
+POR_recognize_striking_rights_desc:0 ""
+POR_terminate_the_provisional_republic:0 "Terminate the Provisional Republic"
+POR_terminate_the_provisional_republic_desc:0 ""
+POR_modification_of_national_symbols:0 "Modification of National Symbols"
+POR_modification_of_national_symbols_desc:0 ""
+POR_hero_of_the_republic:0 "Hero of the Republic"
+POR_hero_of_the_republic_desc:0 ""
+POR_machado_triumphant:0 "Machado Triumphant"
+POR_machado_triumphant_desc:0 ""
+POR_divided_ideals:0 "Divided Ideals"
+POR_divided_ideals_desc:0 ""
+POR_crackdown_on_monarchist_sympathizers:0 "Crackdown on Monarchist Sympathizers"
+POR_crackdown_on_monarchist_sympathizers_desc:0 ""
+POR_disintegration_of_the_PRP:0 "Disintegration of the PRP"
+POR_disintegration_of_the_PRP_desc:0 ""
+POR_introduce_welfare_spending:0 "Introduce Welfare Spending"
+POR_introduce_welfare_spending_desc:0 ""
+POR_sever_revolutionary_attempts:0 "Sever Revolutionary Attempts"
+POR_sever_revolutionary_attempts_desc:0 ""
+POR_denounce_spanish_support:0 "Denounce Bourbon Aid"
+POR_denounce_spanish_support_desc:0 ""
+POR_monarchist_turned_republican:0 "Monarchist-turned-Republican"
+POR_monarchist_turned_republican_desc:0 ""
+POR_multipartisan_strategies:0 "Multipartisan Strategies"
+POR_multipartisan_strategies_desc:0 ""
+POR_grand_orient_of_portugal:0 "Grand Orient of Portugal"
+POR_grand_orient_of_portugal_desc:0 ""
+POR_afonsistas_cabinet:0 "Afonsistas' Cabinet"
+POR_afonsistas_cabinet_desc:0 ""
+POR_deal_with_factionalization:0 "Deal with Factionalization"
+POR_deal_with_factionalization_desc:0 ""
+POR_establish_united_front:0 "Establish a United Front"
+POR_establish_united_front_desc:0 ""
+POR_guarentee_minor_representation:0 "Guarantee Minor Representation"
+POR_guarentee_minor_representation_desc:0 ""
+POR_the_republicana_united:0 "The Republicana United"
+POR_the_republicana_united_desc:0 ""
+POR_for_the_good_of_the_nation:0 "For the Good of the Nation"
+POR_for_the_good_of_the_nation_desc:0 ""
+POR_maintain_relations_with_roman_catholics:0 "Maintain Relations with Roman Catholics"
+POR_maintain_relations_with_roman_catholics_desc:0 ""
+POR_national_consensus_around_the_party:0 "National Consensus Around the Party"
+POR_national_consensus_around_the_party_desc:0 ""
+POR_prevent_total_secularism:0 "Prevent Total Secularism"
+POR_prevent_total_secularism_desc:0 ""
+POR_attempts_at_reunification:0 "Attempts at Reunification"
+POR_attempts_at_reunification_desc:0 ""
+POR_clientelist_politics:0 "Clientelist Politics"
+POR_clientelist_politics_desc:0 ""
+POR_reduce_the_deficit:0 "Reduce the Deficit"
+POR_reduce_the_deficit_desc:0 ""
 
 POR_lisbon_calling:0 "Lisbon's Calling"
 POR_lisbon_calling_desc:0 ""
