minor portraits by Vizmus (not from our team, needs to be asked for permission directly)

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -10185,6 +10185,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_luxembourg.6.a: "France guarantees the continued independence."
  ww1_luxembourg.6.b: "[907.OWNER.GetAdjective]s need war reparations."
  ww1_luxembourg.6.c: "Luxembourg doesn't need to exist."
+ ww1_luxembourg.7.t: "Death of Paul Eyschen"
+ ww1_luxembourg.7.d: "After serving as Prime Minister for twenty-seven years, dominating Luxembourgian political life, holding sway over a succession of monarchs and overseeing an era of economic resurgence and the end of the personal union with the Netherlands, Eyschen died. Due to the unexpected nature of his death at a difficult time for him, there are rumours that he had taken his own life."
+ ww1_luxembourg.7.a: "Who will we ever find to replace you?"
+ 
 
  # KiS NEWS
  kis_news.1.t: "The Great War"
