proper sweden-norway

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1012,6 +1012,7 @@
  NZL_communism_party_long:0 "Wellington Socialist Party"
  
  NOR_neutrality_party:0 "Huset Glücksborg"
+ NOR_SWE_neutrality_party:0 "Huset Bernadotte"
  NOR_communism_party:0 "DNA"
  NOR_communism_party_long:0 "Det Norske Arbeiderparti"
  NOR_democratic_party:0 "Høyre"
