--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1593,18 +1593,6 @@
  FRA_ENG_autonomy_integrated_puppet_ADJ:0 "French"
  QIN_government:0 "Qing Government"
  QIN_government_DEF:0 "the Qing Government"
- SWE_NOR_democratic:0 "Sweden-Norway"
- SWE_NOR_democratic_DEF:0 "Sweden-Norway"
- SWE_NOR_democratic_ADJ:0 "Swedish-Norwegian"
- SWE_NOR_neutrality:0 "Sweden-Norway"
- SWE_NOR_neutrality_DEF:0 "the United Kingdoms of Sweden and Norway"
- SWE_NOR_neutrality_ADJ:0 "Swedish-Norwegian"
- SWE_NOR_fascism:0 "Sweden-Norway"
- SWE_NOR_fascism_DEF:0 "the Union of Sweden-Norway"
- SWE_NOR_fascism_ADJ:0 "Swedish-Norwegian"
- SWE_NOR_communism:0 "Northern Socialist Republics"
- SWE_NOR_communism_DEF:0 "Northern Socialist Republics"
- SWE_NOR_communism_ADJ:0 "Northern"
  SWE_swedish_empire:0 "Swedish Empire"
  SWE_swedish_empire_DEF:0 "the Empire of Sweden"
  SWE_swedish_empire_communism:0 "Folkrik"
@@ -1620,6 +1608,8 @@
  SCA_fascism_DEF:0 "the Scandinavian Empire"
  SCA_communism:0 "Scandinavian Collective"
  SCA_communism_DEF:0 "the People's Communes of Scandinavia"
+ NOR_union:0 "Kingdom of Norway"
+ NOR_union_DEF:0 "the Kingdom of Norway"
  KMT_NANJING:0 "Nanjing National Government"
  KMT_NANJING_DEF:0 "the Nanjing National Government of the Republic of China"
  KMT_NANJING_ADJ:0 "Chinese"
