focus: Job Placement Act

--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -450,6 +450,8 @@ GER_expand_fortifications_in_allestein:0 "Expand Forticiations in Allestein"
 #Centrist
 GER_law_on_the_constitution_for_alsace_bund:0 "Law on the Constitution for Alsace"
 GER_law_on_the_constitution_for_alsace_reich:0 "Law on the Constitution for Alsace"
+GER_job_placement_act_bund:0 "Job Placement Act"
+GER_job_placement_act_reich:0 "Job Placement Act"
 
 #Sokehn Rebbelion
 GER_sokehs_rebbelion:0 "The Sokehs Rebbelion"
