--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10860,8 +10860,8 @@ POR_terminate_the_provisional_republic:0 "Terminate the Provisional Republic"
 POR_terminate_the_provisional_republic_desc:0 ""
 POR_modification_of_national_symbols:0 "Modification of National Symbols"
 POR_modification_of_national_symbols_desc:0 ""
-POR_hero_of_the_republic:0 "Hero of the Republic"
-POR_hero_of_the_republic_desc:0 ""
+POR_poet_president:0 "The Poet President"
+POR_poet_president_desc:0 ""
 POR_machado_triumphant:0 "Machado Triumphant"
 POR_machado_triumphant_desc:0 ""
 POR_divided_ideals:0 "Divided Ideals"
