--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -76,6 +76,8 @@ GER_idea_extreme_rationing:0 "Extreme Rationing"
 GER_idea_extreme_rationing_desc:0 ""
 GER_hollwegs_national_pension:0 "Hollweg's National Pension"
 GER_hollwegs_national_pension_desc:0 ""
+GER_discrimitory_national_pension:0 "Discrimitory National Pension"
+GER_discrimitory_national_pension_desc:0 ""
 
 #Put stuff in the right place Mici!
 GER_state_of_the_military:0 "State of the Military"
@@ -458,6 +460,10 @@ GER_job_placement_act_reich:0 "Job Placement Act"
 #Leftist
 GER_law_on_hollwegs_national_pension_bund:0 "Law on Hollweg's National Pension"
 GER_law_on_hollwegs_national_pension_reich:0 "Law on Hollweg's National Pension"
+
+#Rightist
+GER_law_on_discrimitory_national_pension_bund:0 "Law on Discrimitory National Pension"
+GER_law_on_discrimitory_national_pension_reich:0 "Law on Discrimitory National Pension"
 
 #Sokehs Rebbelion
 GER_sokehs_rebbelion:0 "The Sokehs Rebbelion"
