--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8706,6 +8706,24 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  POR_chamber_of_deputies:0 "Chamber of Deputies"
  POR_chamber_of_deputies_desc:0 ""
+ semicircle_parliament_gui_title:0 "Chamber of Deputies"
+ parliament_main_icon_tt:0 "[GetParliamentSeatName] - [GetParliamentPartyName]"
+ parliament_seat_text:0 "Seat [?temp_seat|Y0]"
+ parliament_member_text:0 "[GetParliamentPartyName] - [?parliament_seat_array^parliament_member_index] Seats [GetParliamentPartyAlliance]"
+ parliament_modify_button_tt:0 "§GCtrl+Click§! to add §Y5§! Seats from [GetParliamentPartyName]\n§GShift+Click§! to subtract §Y5§! Seats from [GetParliamentPartyName]"
+ POR_parliament_desc:0 "We are controlling [?progressive_alliance|Y0] seats ([?progressive_alliance_percent] %)"
+ POR_parliament_allied:0 "§G(Coalition Member)§!"
+
+ party_1_text:0 "Regenerator Party"
+ party_2_text:0 "Progressive Party"
+ party_3_text:0 "Progressive Dissidents"
+ party_4_text:0 "Portuguese Republican Party"
+ party_5_text:0 "Liberal Regenerator Party"
+ party_6_text:0 "Nationalist Party"
+ party_7_text:0 "Independents"
+ POR_parliament_main_icon_tt:0 "WIP"
+
+
  POR_suppress_monarchist_and_clerical_opposition:0 "Suppress Monarchist and Clerical Opposition"
  POR_suppress_monarchist_and_clerical_opposition_desc:0 ""
  POR_national_stability_act:0 "National Stability Act"
